--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content='Magar Lama Keyboard-Akkha Rika Lipi'>
+	<meta property="og:type" content="Keyboard-Akkha" />
+	<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/mymediastorage-e5bb2.appspot.com/o/Magar-lama-keybaord-layout.png?alt=media&token=ae086bb9-3429-49ed-85ed-3e3384de87f7">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Practice typing Magar Akkha-rika Lipi"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Magar Lama Keyboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
